--- a/Translation/Translation.csproj
+++ b/Translation/Translation.csproj
@@ -17,10 +17,11 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>DotnetOmar.Translation</PackageId>
+        <Version>1.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="LinqKit" Version="1.2.4" />
+        <PackageReference Include="LinqKit" Version="1.1.24" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
